fix(epic-381A): add FK constraints, use unmodifiable lists, add test coverage
- Add REFERENCES customers(id) FK on filing_statuses.customer_id
- Add REFERENCES projects(id) ON DELETE SET NULL on linked_project_id
- Replace Collectors.toList() with .toList() for unmodifiable returns
- Remove unused Collectors import
- Add SQL comment explaining CHECK constraint (ADR-199 lazy creation)
- Add tests for getDeadlineType(null) and getCategories("ZA")

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>